Fix table overflow.

--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -231,6 +231,10 @@
   min-height: 30px;
 }
 
+.tablesaw-swipe-wrapper table {
+  table-layout: auto;
+}
+
 .batch-inputs > * {
   position: relative;
   z-index: 1;
